body content mobile responsive design done

--- a/src/components/body-content-right-side/mobile/mobile-filter-and-sort-button/styles.scss
+++ b/src/components/body-content-right-side/mobile/mobile-filter-and-sort-button/styles.scss
@@ -21,6 +21,10 @@
     margin: 0rem !important;
   }
 
+  .modal {
+    padding-left: 0px !important;
+    border: none;
+  }
   .second-nav {
     margin-bottom: 20px !important;
   }
