--- a/src/components/body-content-left-side/filter-by-star-rating/styles.scss
+++ b/src/components/body-content-left-side/filter-by-star-rating/styles.scss
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 992px) {
   .border {
-    border: 1px solid green;
+    // border: 1px solid green;
   }
 
   .radio-button-padding-left {
@@ -61,7 +61,7 @@
 
 @media only screen and (max-width: 600px) {
   .border {
-    border: 1px solid green;
+    // border: 1px solid green;
   }
 
   .radio-button-padding-left {
