--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -61,7 +61,7 @@
   }
   .second-nav {
     height: 50px;
-    border-top: 1px solid green;
+    // border-top: 1px solid green;
     padding-top: 10px;
     display: flex;
     position: relative;
