--- a/src/components/body-content-left-side/filter-by-wine-type/styles.scss
+++ b/src/components/body-content-left-side/filter-by-wine-type/styles.scss
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 992px) {
   .border {
-    border: 1px solid green;
+    // border: 1px solid green;
   }
 
   .wine-types {
@@ -26,7 +26,7 @@
 
 @media only screen and (max-width: 600px) {
   .border {
-    border: 1px solid green;
+    // border: 1px solid green;
   }
 
   .wine-types {
