--- a/src/components/footer/second-footer/styles.scss
+++ b/src/components/footer/second-footer/styles.scss
@@ -127,7 +127,7 @@
   .image-sitemap {
     height: 35px;
     margin-left: 10px;
-    width: 2%;
+    width: 5%;
   }
 
   .sitemap-div {
@@ -151,9 +151,16 @@
     text-decoration: none;
   }
 
+  .sitemap-one-element:hover {
+    color: #1e1e1e;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
   .social-media-icons {
-    width: 10%;
-    margin-top: 8px;
+    width: 100%;
+    margin-top: 28px;
+    display: flex;
     justify-content: flex-end;
     float: right;
   }
