create mobile drawer for offers and wines buttons

--- a/src/components/body-content-left-side/filter-by-star-rating/styles.scss
+++ b/src/components/body-content-left-side/filter-by-star-rating/styles.scss
@@ -29,6 +29,7 @@
     align-items: center;
     margin-left: 0px !important;
     margin-right: 0px !important;
+    margin-top: -8px !important;
     vertical-align: middle;
     -webkit-tap-highlight-color: transparent;
     width: 16;
