--- a/src/components/second-header/bottom-line/styles.scss
+++ b/src/components/second-header/bottom-line/styles.scss
@@ -1,30 +1,31 @@
-.wine-line-raw {
-  margin: 20px 10px 20px 20px !important;
-  position: relative;
-  // border: 1px solid black;
-}
+@media only screen and (min-width: 600px) {
+  .wine-line-raw {
+    margin: 20px 10px 20px 20px !important;
+    position: relative;
+    // border: 1px solid black;
+  }
 
-.wine-line-img-1 {
-  //   float: left !important;
-  //   display: flex;
-  height: 70px;
-  //   border: 1px solid black;
-  background-image: url(./../../../assests/img/wines-row-img-1.webp);
-  background-repeat: no-repeat;
-  background-color: rgba(165, 42, 42, 0.07);
-  padding: 20px !important;
-  transition: transform 0.2s;
-  max-width: 100%;
-  transition: all 1s ease;
-}
+  .wine-line-img-1 {
+    //   float: left !important;
+    //   display: flex;
+    height: 70px;
+    //   border: 1px solid black;
+    background-image: url(./../../../assests/img/wines-row-img-1.webp);
+    background-repeat: no-repeat;
+    background-color: rgba(165, 42, 42, 0.07);
+    padding: 20px !important;
+    transition: transform 0.2s;
+    max-width: 100%;
+    transition: all 1s ease;
+  }
 
-.wine-line-img-1:hover {
-  transform: scale(1.05);
-  cursor: pointer;
-  max-height: 70px !important;
-}
+  .wine-line-img-1:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+    max-height: 70px !important;
+  }
 
-.wine-line-img-2 {
+  .wine-line-img-2 {
     //   float: left !important;
     //   display: flex;
     height: 70px;
@@ -37,25 +38,32 @@
     max-width: 100%;
     transition: all 1s ease;
   }
-  
+
   .wine-line-img-2:hover {
     transform: scale(1.05);
     cursor: pointer;
     max-height: 70px !important;
   }
-.wine-line-content {
-  height: 70px;
-  //   border: 1px solid green;
-  padding: 10px;
-  padding-left: 0px !important;
-  text-align: left;
-  position: absolute;
-  vertical-align: auto !important;
-  max-width: 80% !important;
-  background-color: rgba(165, 42, 42, 0.07);
-}
+  .wine-line-content {
+    height: 70px;
+    //   border: 1px solid green;
+    padding: 10px;
+    padding-left: 0px !important;
+    text-align: left;
+    position: absolute;
+    vertical-align: auto !important;
+    max-width: 80% !important;
+    background-color: rgba(165, 42, 42, 0.07);
+  }
 
-.wine-line-content:hover {
-  text-decoration: underline;
-  cursor: pointer;
+  .wine-line-content:hover {
+    text-decoration: underline;
+    cursor: pointer;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .wine-line-raw {
+    display: none !important;
+    // border: 1px solid black;
+  }
 }
