--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -94,6 +94,7 @@
     margin-bottom: 20px;
     float: right;
     margin-right: 10px;
+    height: 15px;
   }
   .mobile-nev-item {
     margin-left: 10px;
