changed wine-raw styles

--- a/src/components/second-header/regions-nav/styles.scss
+++ b/src/components/second-header/regions-nav/styles.scss
@@ -45,6 +45,7 @@
 
       .wine-raw {
         margin: 20px 10px 20px 10px;
+        z-index: 10000;
         // border: 1px solid black;
       }
       .remove-margin {
