fixing drawer issue when deploying

--- a/src/components/header/mobile/mobile-second-nav/styles.scss
+++ b/src/components/header/mobile/mobile-second-nav/styles.scss
@@ -9,7 +9,7 @@
     width: 100% !important;
   }
   .MuiDrawer-root {
-    z-index: 13000;
+    z-index: 13000 !important;
   }
   .second-mobile-nav-button {
     width: 50%;
