--- a/src/components/body-content-right-side/mobile/mobile-filter-and-sort-button/styles.scss
+++ b/src/components/body-content-right-side/mobile/mobile-filter-and-sort-button/styles.scss
@@ -69,4 +69,15 @@
     text-decoration: none;
     cursor: pointer;
   }
+  .modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 13000 !important;
+    display: none;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    outline: 0;
+  }
 }
