--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -2,10 +2,11 @@
   .header {
     height: 130px;
     //   border: 2px solid green;
-    margin: 0px;
+    margin: 0px !important;
     padding-left: 40px;
     padding-right: 40px;
     box-shadow: 0 1px 4px #a8a5a3;
+    width: 100% !important;
   }
   .body-content {
     margin-left: 45px;
@@ -36,6 +37,8 @@
     // padding-left: 40px;
     // padding-right: 40px;
     box-shadow: 0 1px 4px #a8a5a3;
+    width: 103% !important;
+    margin: 0px !important;
   }
 
   .second-nav button:first-child {
